2010-05-02  Chris Jerdonek  <cjerdonek@webkit.org>

        Unreviewed.

        Corrected a file path in the ChangeLog entry for r58663 (bug 38319) below.

2010-05-02  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=38319

        * Scripts/VCSUtils.pm:
          - In parseDiffHeader()--
            - Added an "scmFormat" hash key to the return value to represent
              whether the diff is Git or SVN formatted.
            - Adjusted the code so the value of "copiedFromPath" will
              be undef rather than "does not exist" if the file was not
              copied.

        * Scripts/webkitperl/VCSUtils_unittest/parseDiff.pl:
          - Added a FIXME to refactor these unit tests to use is_deeply().

        * Scripts/webkitperl/VCSUtils_unittest/parseDiffHeader.pl:
          - Updated the unit tests to test the "scmFormat" value.
          - Simplified the unit tests by refactoring them to use is_deeply().

2010-05-01  Daniel Bates  <dbates@rim.com>

        Reviewed by Chris Jerdonek.

        https://bugs.webkit.org/show_bug.cgi?id=38423

        Adds infrastructure to change the file mode of a file using
        the appropriate SCM-specific routines.

        No functionality was changed, so no new tests.

        * Scripts/VCSUtils.pm: Added subroutines scmToggleExecutableBit,
        scmAddExecutableBit, and scmRemoveExecutableBit.
        * Scripts/svn-apply: Check for the hash key executableBitDelta
        and toggle the executable bit.
        * Scripts/svn-unapply: Ditto.

2010-04-30  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Simon Fraser.

        Enabled accelerated compositing in DRT for Windows
        https://bugs.webkit.org/show_bug.cgi?id=38404

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (main):

2010-04-30  Anders Carlsson  <andersca@apple.com>

        Try to fix GTK+ build.
