@@ -30,16 +30,6 @@ use warnings;
 use Test::More;
 use VCSUtils;
 
-# FIXME: Refactor the unit tests in this file to use is_deeply().
-#        See the unit tests for parseDiffHeader() as an example.
-
-my @diffHashRefKeys = ( # The $diffHashRef keys to check.
-    "copiedFromPath",
-    "indexPath",
-    "sourceRevision",
-    "svnConvertedText",
-);
-
 # The array of test cases.
 my @testCaseHashRefs = (
 {
@@ -56,7 +46,8 @@ Index: Makefile
  
  all:
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END', # Same as input text
 Index: Makefile
 ===================================================================
@@ -71,9 +62,9 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => "53052",
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 {
     # New test
@@ -92,7 +83,8 @@ Index: Makefile
  
  all:
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END', # Same as input text
 
 LEADING JUNK
@@ -110,9 +102,9 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => "53052",
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 {
     # New test
@@ -125,7 +117,8 @@ Index: Makefile_new
 @@ -0,0 +1,1 @@
 +MODULES = JavaScriptCore JavaScriptGlue WebCore WebKit WebKitTools
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END', # Same as input text
 Index: Makefile_new
 ===================================================================
@@ -137,9 +130,9 @@ END
     copiedFromPath => "Makefile",
     indexPath => "Makefile_new",
     sourceRevision => "53131",
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 {
     # New test
@@ -155,7 +148,8 @@ Index: Makefile_new
 ===================================================================
 --- Makefile_new	(revision 53131)	(from Makefile:53131)
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END',
 Index: Makefile
 ===================================================================
@@ -167,9 +161,9 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => "53131",
-    # Other values to check
-    lastReadLine => "Index: Makefile_new\n",
-    nextLine => "===================================================================\n",
+},
+"Index: Makefile_new\n"],
+    expectedNextLine => "===================================================================\n",
 },
 {
     # New test
@@ -187,7 +181,8 @@ index f5d5e74..3b6aa92 100644
 +++ b/Makefile
 @@ -1,1 1,1 @@ public:
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END', # Same as input text
 Index: Makefile
 ===================================================================
@@ -204,9 +199,9 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => "53131",
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 {
     # New test
@@ -218,7 +213,8 @@ index f5d5e74..3b6aa92 100644
 +++ b/Makefile
 @@ -1,1 1,1 @@ public:
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END',
 Index: Makefile
 index f5d5e74..3b6aa92 100644
@@ -229,9 +225,9 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => undef,
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 {
     # New test
@@ -246,7 +242,8 @@ Index: Makefile_new
 ===================================================================
 --- Makefile_new	(revision 53131)	(from Makefile:53131)
 END
-    # Header keys to check
+    expectedReturn => [
+{
     svnConvertedText =>  <<'END',
 Index: Makefile
 index f5d5e74..3b6aa92 100644
@@ -260,73 +257,27 @@ END
     copiedFromPath => undef,
     indexPath => "Makefile",
     sourceRevision => undef,
-    # Other values to check
-    lastReadLine => undef,
-    nextLine => undef,
+},
+undef],
+    expectedNextLine => undef,
 },
 );
 
-# Return the arguments for each assertion per test case.
-#
-# In particular, the number of assertions per test case is the length
-# of the return value of this subroutine on a sample input.
-#
-# Returns @assertionArgsArrayRefs:
-#   $assertionArgsArrayRef: A reference to an array of parameters to pass
-#                           to each call to is(). The parameters are--
-#                             $got: The value obtained
-#                             $expected: The expected value
-#                             $testName: The name of the test
-sub testParseDiffAssertionArgs($)
-{
-    my ($testCaseHashRef) = @_;
+my $testCasesCount = @testCaseHashRefs;
+plan(tests => 2 * $testCasesCount); # Total number of assertions.
+
+foreach my $testCase (@testCaseHashRefs) {
+    my $testNameStart = "parseDiff(): $testCase->{diffName}: comparing";
 
     my $fileHandle;
-    open($fileHandle, "<", \$testCaseHashRef->{inputText});
-
+    open($fileHandle, "<", \$testCase->{inputText});
     my $line = <$fileHandle>;
 
-    my ($diffHashRef, $lastReadLine) = VCSUtils::parseDiff($fileHandle, $line);
+    my @got = VCSUtils::parseDiff($fileHandle, $line);
+    my $expectedReturn = $testCase->{expectedReturn};
 
-    my $testNameStart = "parseDiff(): [$testCaseHashRef->{diffName}] ";
+    is_deeply(\@got, $expectedReturn, "$testNameStart return value.");
 
-    my @assertionArgsArrayRefs; # Return value
-    my $assertionArgsRef;
-
-    foreach my $diffHashRefKey (@diffHashRefKeys) {
-        my $testName = "${testNameStart}key=\"$diffHashRefKey\"";
-        $assertionArgsRef = [$diffHashRef->{$diffHashRefKey}, $testCaseHashRef->{$diffHashRefKey}, $testName];
-        push(@assertionArgsArrayRefs, $assertionArgsRef);
-    }
-
-    $assertionArgsRef = [$lastReadLine, $testCaseHashRef->{lastReadLine}, "${testNameStart}lastReadLine"];
-    push(@assertionArgsArrayRefs, $assertionArgsRef);
-
-    my $nextLine = <$fileHandle>;
-    $assertionArgsRef = [$nextLine, $testCaseHashRef->{nextLine}, "${testNameStart}nextLine"];
-    push(@assertionArgsArrayRefs, $assertionArgsRef);
-
-    return @assertionArgsArrayRefs;
-}
-
-# Test parseDiff() for the given test case.
-sub testParseDiff($)
-{
-    my ($testCaseHashRef) = @_;
-
-    my @assertionArgsArrayRefs = testParseDiffAssertionArgs($testCaseHashRef);
-
-    foreach my $arrayRef (@assertionArgsArrayRefs) {
-        # The parameters are -- is($got, $expected, $testName).
-        is($arrayRef->[0], $arrayRef->[1], $arrayRef->[2]);
-    }
-}
-
-# Count the number of assertions per test case, using a sample test case.
-my $assertionCount = testParseDiffAssertionArgs($testCaseHashRefs[0]);
-
-plan(tests => @testCaseHashRefs * $assertionCount); # Total number of tests
-
-foreach my $testCaseHashRef (@testCaseHashRefs) {
-    testParseDiff($testCaseHashRef);
+    my $gotNextLine = <$fileHandle>;
+    is($gotNextLine, $testCase->{expectedNextLine},  "$testNameStart next read line.");
 }
